--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -4,8 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta name="author" content="Matt Everson of Astuteo, LLC – http://astuteo.com/slickmap" />
-	<title>SlickMap CSS</title>
+	<title>Dorm Gourmet Sitemap</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="slickmap.css" />
 </head>
 
@@ -13,8 +12,8 @@
 
 	<div class="sitemap">
 		
-		<h1>Project Title</h1>
-		<h2>Preliminary Site Map &mdash; Version 1.0</h2>
+		<h1>Dorm Gourmet</h1>
+		<h2>Preliminary Site Map &mdash; Version 1.1</h2>
 	
 		<ul id="utilityNav">
 			<li><a href="/register">Register</a></li>
@@ -23,49 +22,18 @@
 		</ul>
 
 		<ul id="primaryNav" class="col4">
-			<li id="home"><a href="http://sitetitle.com">Home</a></li>
-			<li><a href="/about">About Us</a>
-				<ul>
-					<li><a href="/history">Our History</a></li>
-					<li><a href="/mission">Mission Statement</a></li>
-					<li><a href="/principals">Principals</a></li>
-				</ul>
+			<li id="home"><a href="http://evansykes.github.io/P3-Prototype-Boilerplate/sitemap/index.html">Home</a></li>
+			<li><a href="/video">Videos</a>
 			</li>
-			<li><a href="/services">Services</a>
-				<ul>
-					<li><a href="/services/design">Graphic Design</a></li>
-					<li><a href="/services/development">Web Development</a></li>
-					<li><a href="/services/marketing">Internet Marketing</a>
-						<ul>
-							<li><a href="/social-media">Social Media</a></li>
-							<li><a href="/optimization">Search Optimization</a></li>
-							<li><a href="/adwords">Google AdWords</a></li>
-						</ul>
-					</li>
-					<li><a href="/services/copywriting">Copywriting</a></li>
-					<li><a href="/services/photography">Photography</a></li>
-				</ul>
+			<li><a href="/about">About</a>
 			</li>
-			<li><a href="/projects">Projects</a>
+			<li><a href="/recipes">Recipes</a>
 				<ul>
-					<li><a href="/projects/finance">Finance</a></li>
-					<li><a href="/projects/medical">Medical</a></li>
-					<li><a href="/projects/education">Education</a></li>
-					<li><a href="/projects/professional">Professional</a></li>
-					<li><a href="/projects/industrial">Industrial</a></li>
-					<li><a href="/projects/commercial">Commercial</a></li>	
-					<li><a href="/projects/energy">Energy</a></li>
+					<li><a href="/recipes/archive">Recipe Archive</a></li>
+					<li><a href="/recipes/submit">Submit your own recipe</a></li>
 				</ul>
 			</li>
 			<li><a href="/contact">Contact</a>
-				<ul>
-					<li><a href="/contact/offices">Offices</a>
-						<ul>
-							<li><a href="contact/map">Map</a></li>
-							<li><a href="contact/form">Contact Form</a></li>
-						</ul>
-					</li>
-				</ul>
 			</li>	
 		</ul>
 
