Add lo-fi mockup
##Add JPG's of mockups done on Keynote

--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -22,7 +22,7 @@
 		</ul>
 
 		<ul id="primaryNav" class="col4">
-			<li id="home"><a href="http://evansykes.github.io/P3-Prototype-Boilerplate/sitemap/index.html">Home</a></li>
+			<li id="home"><a href="http://evansykes.github.io/P3-Prototype-Boilerplate/sitemap/images/home.jpg">Home</a></li>
 			<li><a href="/video">Videos</a>
 			</li>
 			<li><a href="/about">About</a>
