--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -13,7 +13,7 @@
 	<div class="sitemap">
 		
 		<h1>Dorm Gourmet</h1>
-		<h2>Preliminary Site Map &mdash; Version 1.1</h2>
+		<h2>Preliminary Site Map &mdash; Version 1.2</h2>
 	
 		<ul id="utilityNav">
 			<li><a href="/register">Register</a></li>
@@ -23,11 +23,11 @@
 
 		<ul id="primaryNav" class="col4">
 			<li id="home"><a href="http://evansykes.github.io/P3-Prototype-Boilerplate/sitemap/images/home.jpg">Home</a></li>
-			<li><a href="/video">Videos</a>
+			<li><a href="http://evansykes.github.io/P3-Prototype-Boilerplate/sitemap/images/video.jpg">Videos</a>
 			</li>
-			<li><a href="/about">About</a>
+			<li><a href="http://evansykes.github.io/P3-Prototype-Boilerplate/sitemap/images/about.jpg">About</a>
 			</li>
-			<li><a href="/recipes">Recipes</a>
+			<li><a href="http://evansykes.github.io/P3-Prototype-Boilerplate/sitemap/images/recipes.jpg">Recipes</a>
 				<ul>
 					<li><a href="/recipes/archive">Recipe Archive</a></li>
 					<li><a href="/recipes/submit">Submit your own recipe</a></li>
